using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerData : MonoBehaviour
{
    public bool isIdle = false;
    public bool isWalking = false;
    public bool isRunning = false;
    public bool isCrouching = false;
    public bool isCrouchingWalk = false;
    public bool isAiming = false;
}
